--- a/estilos.css
+++ b/estilos.css
@@ -3,3 +3,48 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+h1{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#contenedor{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.elemento{
+    width: 30%;
+    height: 15vh;
+    display: flex;
+    flex-flow: row wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 20px 20px;
+    background-color: rgb(50, 47, 47);
+    margin: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+
+a{
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
