--- a/estilos.css
+++ b/estilos.css
@@ -4,13 +4,18 @@
     box-sizing: border-box;
 }
 
+body{
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+}
+
 h1{
     margin-left: auto;
     margin-right: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #contenedor{
